--- a/scss/_top-bar.scss
+++ b/scss/_top-bar.scss
@@ -115,7 +115,7 @@ ul.dropdown {
 
 ul.dropdown {
 	background: lighten($darkblue, 10%);
-	padding: 10px;
+	padding: 10px 15px;
 	margin: 0;
 	li {
 		margin: 10px 0;
